Fix spelling of "occurrence"

--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -41,7 +41,7 @@
                    name="distkey"/>
           </td>
           <td class="text-center">
-            {{p.OccuranceProbability | number : 4}}
+            {{p.OccurrenceProbability | number : 4}}
           </td>
           <td ng-if="p.InboundName !== 'time'">
             <button ng-click="dropColumnFromSchema($index)"
