Validate columns for varchars, and only add (size) for varchars

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -53,6 +53,7 @@
       </td>
       <td class="text-center">
         <input ng-if="newCol.Transformer == 'varchar'"
+               type="number"
                value="{{newCol.size}}"
                ng-model="newCol.size"
                name="columnSize"/>
