--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -72,6 +72,7 @@
           </td>
           <td class="text-center">
             <input ng-if="newCol.Transformer == 'varchar'"
+                   type="number"
                    value="{{newCol.size}}"
                    ng-model="newCol.size"
                    />
