Drop Column on Blueprint
Summary: Blueprint's Drop Column changes. Includes front end buttons, validating dropped column, and adding it to blueprint-db,

Test Plan: Tested on integration, and locally.

Reviewers: rhu, mperrone

Reviewed By: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4012

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -18,7 +18,18 @@
       <td>{{c.OutboundName}}</td>
       <td>{{c.Transformer}}</td>
       <td class="text-center">{{c.ColumnCreationOptions}}</td>
-      <td>&nbsp</td>
+      <td class="text-center">
+        <button
+          ng-if="!columnAlreadyStagedForDelete($index)"
+          ng-click="deleteColumnFromSchema($index)"
+        type="button"
+        class="btn btn-danger">Drop</button>
+        <button
+          ng-if="columnAlreadyStagedForDelete($index)"
+          ng-click="undoDeleteColumnFromSchema($index)"
+        type="button"
+        class="btn btn-info">Undo Drop</button>
+      </td>
     </tr>
     <tr ng-repeat="c in additions.Columns">
       <td>{{c.InboundName}}</td>
@@ -65,11 +76,12 @@
       </td>
     </tr>
     <tr>
-      <td colspan="4"></td>
+      <td colspan="2"></td>
+      <td class="text-center">Adding {{additions.Columns.length}}</td>
+      <td class="text-center">Dropping {{deletes.ColInds.length}}</td>
       <td class="text-center">
           <button type="submit"
                   class="btn btn-success">Update Schema</button>
-
       </td>
     </tr>
   </tfoot>
