Prevent (dist|sort)key from being dropped
Summary: We want to prevent distkey and sortkey from being dropped from the table.

Test Plan: Tested locally and on integration.

Reviewers: dwe

Reviewed By: dwe

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4066

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -20,12 +20,12 @@
       <td class="text-center">{{c.ColumnCreationOptions}}</td>
       <td class="text-center">
         <button
-          ng-if="!columnAlreadyStagedForDelete($index)"
+          ng-if="!columnAlreadyStagedForDelete($index) && columnIsDeletable($index)"
           ng-click="deleteColumnFromSchema($index)"
         type="button"
         class="btn btn-danger">Drop</button>
         <button
-          ng-if="columnAlreadyStagedForDelete($index)"
+          ng-if="columnAlreadyStagedForDelete($index) && columnIsDeletable($index)"
           ng-click="undoDeleteColumnFromSchema($index)"
         type="button"
         class="btn btn-info">Undo Drop</button>
