Offpeak migration warning message
Summary: Added a message

Test Plan: Looked at it

Reviewers: mperrone

Reviewed By: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4090

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -1,7 +1,8 @@
 <h1><a href="#/schemas">&#x21e6</a> Published Schema for {{schema.EventName}}</h1>
 
-<form name="updateSchemaForm" ng-submit="updateSchema()">
+Note: any changes will be queued until offpeak hours - Redshift data for this table will be delayed from when said change is queued until it is executed offpeak.
 
+<form name="updateSchemaForm" ng-submit="updateSchema()">
 <table class="table table-hover">
   <thead>
     <tr>
