Add better read-only mode
Summary:
Make non-logged-in users able to use the UI in a read-only manner.
Make users explicitly log in to make schema changes.
Disable/remove inputs on schema list and schema creation (to support viewing schema suggestions).
Leave the schema editing page as-is because it's not linked to.
Login checking is done via a cookie since the server is performing access control.
Remove notes/suggestions on the schema creation page since they are unused.
Fix a bug in renamed outbound columns disappearing on schema update.
Redirect the root page over http to https in nginx.
Prevent saving when a column is partially added.

Test Plan: Tested UI and interactions locally logged in and logged out.

Reviewers: mperrone

Reviewed By: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4281

--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -10,8 +10,9 @@
           <th>Outbound</th>
           <th>Column Type</th>
           <th class="text-center">Column Size</th>
-          <th class="text-center">Distribution Key</th>
+          <th class="text-center" ng-if="loginName">Distribution Key</th>
           <th class="text-center">Occurrence Rate</th>
+          <th ng-if="loginName">&nbsp;</th>
         </tr>
       </thead>
       <tbody>
@@ -19,22 +20,26 @@
           <td><input type="text"
                      value="{{p.InboundName}}"
                      ng-model="p.InboundName"
+                     ng-disabled="!loginName"
                      required/></td>
           <td><input type="text"
                      value="{{p.OutboundName}}"
                      ng-model="p.OutboundName"
+                     ng-disabled="!loginName"
                      required/></td>
           <td>
             <select ng-options="type for type in types"
+                    ng-disabled="!loginName"
                     ng-model="p.Transformer"/>
           </td>
           <td class="text-center">
             <input ng-if="p.Transformer == 'varchar'"
                    value="{{p.size}}"
                    ng-model="p.size"
+                   ng-disabled="!loginName"
                    required/>
           </td>
-          <td class="text-center">
+          <td class="text-center" ng-if="loginName">
             <input type="radio"
                    ng-model="event.distkey"
                    value="{{p.OutboundName}}"
@@ -43,7 +48,7 @@
           <td class="text-center">
             {{p.OccurrenceProbability | number : 4}}
           </td>
-          <td ng-if="p.InboundName !== 'time'">
+          <td ng-if="p.InboundName !== 'time' && loginName">
             <button ng-click="dropColumnFromSchema($index)"
                     type="button"
                     class="btn btn-warning">
@@ -53,7 +58,7 @@
         </tr>
       </tbody>
       <tfoot>
-        <tr>
+        <tr ng-if="loginName">
           <td>
             <input type="text"
                    id="newInboundName"
@@ -83,7 +88,7 @@
                     class="btn btn-primary">Add!</button>
           </td>
         </tr>
-        <tr>
+        <tr ng-if="loginName">
           <td colspan="4"></td>
           <td class="text-center">
             <input type="hidden"
@@ -94,11 +99,6 @@
           </td>
         </tr>
       </tfoot>
-      {{suggestions}}
     </table>
   </form>
-  <h2 ng-if="notes">Notes from the suggestion overrider</h2>
-  <ul>
-    <li ng-repeat="n in notes">{{n}}</li>
-  </ul>
 </div>
