--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -10,7 +10,7 @@ Note: any changes will be queued until offpeak hours - Redshift data for this ta
       <th>Outbound</th>
       <th>Column Type</th>
       <th class="text-center">Column Options</th>
-      <th>&nbsp</th>
+      <th>&nbsp;</th>
     </tr>
   </thead>
   <tbody>
