Add ability to drop tables and request them to be dropped.
Summary:
Allow tables that don't exist yet in Redshift to be dropped.
Any other tables can have a drop requested, which will notify
the team via slack and mark them as being dropped in the UI.
Once tables are dropped, they are no longer visible on blueprint,
and they can be recreated.
For complicated reasons, a table can't be automatically dropped
even if it doesn't exist on Redshift if it's already been dropped
and recreated.

Test Plan: Ran integration test.

Reviewers: mperrone

Reviewed By: mperrone

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4445

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -1,8 +1,24 @@
-<h1><a href="#/schemas">&#x21e6</a> Published Schema for {{schema.EventName}}</h1>
+<h1><a href="#/schemas">&#x21e6</a> Published Schema for {{schema.EventName}}
+  <button ng-click="showDropTable = !showDropTable"
+          type="button" class="btn" ng-class="{'btn-danger': !showDropTable, 'btn-success': showDropTable}"
+          ng-show="dropMessage">{{ showDropTable ? cancelDropMessage : dropMessage }}</button>
+</h1>
+<form ng-show="showDropTable && dropMessage" ng-submit="dropTable()">
+<div class="row form-group" style="margin-top: 35px">
+  <div class="col-xs-3">
+    <label for="reason">Reason for dropping: </label>
+  </div>
+  <div class="col-xs-6">
+    <textarea name="reason" ng-model="dropTableReason" class="form-control"></textarea>
+  </div>
+  <div class="col-xs-3">
+    <button type="submit" class="btn btn-danger">Drop Table</button>
+  </div>
+</div>
+</form>
 
+<form ng-show="!showDropTable || !dropMessage" name="updateSchemaForm" ng-submit="updateSchema()">
 Note: any changes will be queued until offpeak hours - Redshift data for this table will be delayed from when said change is queued until it is executed offpeak.
-
-<form name="updateSchemaForm" ng-submit="updateSchema()">
 <table class="table table-hover">
   <thead>
     <tr>
