--- a/static/template/schema/list.html
+++ b/static/template/schema/list.html
@@ -12,6 +12,11 @@
   </div>
 </div>
 
+<div class="row" ng-if="loading">
+  <div class="col-md-1 col-md-offset-6">
+    <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+  </div>
+</div>
 <div ng-repeat="schema in schemas |
                 filter:search |
                 orderBy:'EventName'">
@@ -49,7 +54,7 @@
   </table>
 </div>
 
-<h1>Unpublished Schemas with Data Incoming</h1>
+<h1 ng-if="ready">Unpublished Schemas with Data Incoming</h1>
 <div ng-repeat="event in suggestions |
                 filter : search |
                 orderBy : 'Occurred' : true ">
