--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -2,6 +2,8 @@
 </h1>
 <div class="row">
   <div class="col-md-5">
+    <button id="button-{{schema.EventName}}" ng-click="ingestTable(schema)" ng-if="loginName && !schema.DropRequested" class="btn btn-primary"
+      >Force Load</button>
     <button ng-click="showDropTable = !showDropTable"
             type="button" class="btn" ng-class="{'btn-danger': !showDropTable, 'btn-success': showDropTable}"
             ng-show="loginName && dropMessage">{{ showDropTable ? cancelDropMessage : dropMessage }}</button>
