--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -10,6 +10,7 @@
           <th>Outbound</th>
           <th>Column Type</th>
           <th class="text-center">Column Size</th>
+          <th class="text-center">Mapping Column</th>
           <th class="text-center" ng-if="loginName">Distribution Key</th>
           <th class="text-center">Occurrence Rate</th>
           <th ng-if="loginName">&nbsp;</th>
@@ -38,6 +39,13 @@
                    ng-model="p.size"
                    ng-disabled="!loginName"
                    required/>
+          </td>
+          <td class="text-center">
+            <select ng-if="usingMappingTransformer(p)"
+                    ng-options="c.InboundName as c.InboundName for c in event.Columns"
+                    ng-model="p.mappingColumn"
+                    ng-disabled="!loginName"
+                    required/>
           </td>
           <td class="text-center" ng-if="loginName">
             <input type="radio"
@@ -83,13 +91,20 @@
                    />
           </td>
           <td class="text-center">
+            <select ng-if="usingMappingTransformer(newCol)"
+                    ng-options="c.InboundName as c.InboundName for c in event.Columns"
+                    ng-model="newCol.mappingColumn"
+                    required/>
+          </td>
+          <td colspan="2"></td>
+          <td>
             <button ng-click="addColumnToSchema(newCol)"
                     type="button"
                     class="btn btn-primary">Add!</button>
           </td>
         </tr>
         <tr ng-if="loginName">
-          <td colspan="4"></td>
+          <td colspan="7"></td>
           <td class="text-center">
             <input type="hidden"
                    value="{{event.EventName}}"
