Fixing the inbound names select on create
Summary: We need to consider duplicate inbound names. Also added a check to make sure the selected inbound is valid just in case.

Test Plan: Verified on the integration page that inbound names are not being duplicated and a table can be created. On prod, I'll create a dummy table to verify the same.

Reviewers: dwe

Reviewed By: dwe

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D4840

--- a/static/template/schema/create.html
+++ b/static/template/schema/create.html
@@ -42,7 +42,7 @@
           </td>
           <td class="text-center">
             <select ng-if="usingMappingTransformer(p)"
-                    ng-options="c.InboundName as c.InboundName for c in event.Columns"
+                    ng-options="name as name for name in validInboundNames()"
                     ng-model="p.mappingColumn"
                     ng-disabled="!loginName"
                     required/>
@@ -92,7 +92,7 @@
           </td>
           <td class="text-center">
             <select ng-if="usingMappingTransformer(newCol)"
-                    ng-options="c.InboundName as c.InboundName for c in event.Columns"
+                    ng-options="name as name for name in validInboundNames()"
                     ng-model="newCol.mappingColumn"
                     required/>
           </td>
